Fixed songs (mostly from rehearsal)

--- a/songs/aldalak-jo-uram.tex
+++ b/songs/aldalak-jo-uram.tex
@@ -11,7 +11,7 @@
 
   \beginverse*
     \[C]Ál\[G]dalak jó U\[Am]ram, \[F]teljes \[G]szívem\[C]ből.
-    \[F]Boldoggá \[G]tesz, hogy \[E]hozzád tarto\[Am]zom.
+    \[F]Boldoggá \[G]tesz, hogy \[E]Hozzád tarto\[Am]zom.
     \[Dm]Alle\[G]{l\_{u}}\[C]ja.
   \endverse
 
