--- a/songs/hus-ver-templom.tex
+++ b/songs/hus-ver-templom.tex
@@ -17,7 +17,7 @@
     \[A#]Dicsérlek, Ura\[A4]m. \[A] :/ \rep{2}
   \endchorus
 
-  \beginverse
+  \beginverse*
     Ez a \[Dm]hús-vér \[Gm]templom \[A]Érted \[Dm]épült,
     Neked \[A#]ég a \[Gm7]tűz bent, \[A]oltárai\[Dm]nál.
     Ez a hús-vér \[Gm]templom \[A]Téged \[Dm]dicsér,
@@ -25,7 +25,7 @@
   \endverse
 
   \beginverse*
-    Refrén
+    Refrén \[Dm]
   \endverse
 
 \endsong
