--- a/songs/itt-vagyok-most-jo-uram.tex
+++ b/songs/itt-vagyok-most-jo-uram.tex
@@ -25,4 +25,8 @@
     Refrén
   \endverse
 
+  \beginverse*
+    És \[D]ének\[Hm7]lem, hogy \[Em7]áldott \[A7]légy, U\[D]ram!
+  \endverse
+
 \endsong
