--- a/songs/kesz-az-en-szivem.tex
+++ b/songs/kesz-az-en-szivem.tex
@@ -1,11 +1,5 @@
 \beginsong{Kész az én szívem}[]
 
-  \ifchorded
-    \beginverse*
-       {\nolyrics Előjáték: \[Dm] \[Dm]}
-    \endverse
-  \fi
-
   \beginverse\memorize
     Kész az \[Dm]én sz\_{í}vem, Uram, \[Gm]Néked zeng a \[Dm]dalom.
     Elő hát hárfa, lant, hadd kel\[C]tsem fel a h\_{a}j\[A]nalt! \[A4] \[A]
@@ -23,7 +17,7 @@
 
   \beginchorus
     /: Szent az \[Dm]Úr, jó az Úr, hirde\[Gm]tem a népek \[Dm]között,
-    Mert az Ő hűsé\[Gm]ge az égig \[Dm]ér. \[A-A4$^{\;(csak\;ismétlésnél)}$]{\ifchorded\hspace{1cm}\fi:/ \rep{2}}
+    Mert az Ő hűsé\[Gm]ge az égig \[Dm]ér. \[A-A4$^{\;(csak\;ismétlésnél)}$]{\ifchorded\hspace{1cm}\fi:/ \rep{2}} \[Dm]
   \endchorus
 
 \endsong
