--- a/songs/napfiver-holdnover.tex
+++ b/songs/napfiver-holdnover.tex
@@ -8,18 +8,18 @@
 
   \beginverse\memorize
     \[D]Fivérem \[F#m]Nap és \[G]n{\_{ő}}\[A]vérem \[D]Hold,
-    \[Hm]Oly' ritkán \[F#m]látlak, s \[G]hallom \[A]hango\[D]tok.
+    \[Hm] Oly' ritkán \[F#m]látlak, s \[G]hallom \[A]hango\[D]tok.
     \[Hm] Nyomaszt a \[F#m]sok \[G]gyötre\[A]lem és \[D]gond.
   \endverse
 
-  \ifchorded
-    \beginverse*
-      {\nolyrics Közjáték: \[Hm] \[F#m] \[G] \[A] \[D]}
-    \endverse
-  \fi
+  % \ifchorded
+  %   \beginverse*
+  %     {\nolyrics Közjáték: \[Hm] \[F#m] \[G] \[A] \[D]}
+  %   \endverse
+  % \fi
 
   \beginverse
-    ^Fivérem ^Szél és ^Le^veg\_{ő}^ég,
+    ^Fivérem ^Szél és ^Leve^{g\_{ő}}^ég,
     ^ Nyisd ki sze^mem, hogy ^lássam, ^ami ^szép!
     ^ Körülö^lel a ^ragyo^gás, dics^fény.
   \endverse
@@ -31,7 +31,7 @@
 
   \beginverse
     ^Fivérem ^Nap és ^n{\_{ő}}^vérem ^Hold,
-    ^Most végre ^látok, s ^hallom ^hango^tok!
+    ^ Most végre ^látok, s ^hallom ^hango^tok!
     ^ Megölel^ném az ^egész ^vil\_{á}^got!
   \endverse
 
@@ -41,8 +41,9 @@
 
   \beginverse*
     ^Fivérem ^Nap és ^n{\_{ő}}^vérem ^Hold,
-    ^Most végre ^látok, s ^hallom ^hango^tok!
-    ^ Megölel^ném az ^egész ^vil\_{á}\[Gm]got! \[Gm7] ^
+    ^ Most végre ^látok, s ^hallom ^hango^tok!
+    ^ Megölel^ném az ^egész ^vil\_{á}^got!
+    % ^ Megölel^ném az ^egész ^vil\_{á}\[Gm]got! \[Gm7] ^
   \endverse
 
 \endsong
