--- a/songs/nincs-mas-isten.tex
+++ b/songs/nincs-mas-isten.tex
@@ -39,7 +39,7 @@
   \endchorus
 
   \beginverse*
-    Refrén \echo{\[D]Mi állhat ellenünk?}
+    Refrén \echo{\[D] Mi állhat elle\[Em]nünk?}
   \endverse
 
 \endsong
