--- a/songs/rajta-dicserjetek-az-ur-nevet.tex
+++ b/songs/rajta-dicserjetek-az-ur-nevet.tex
@@ -17,7 +17,7 @@
     Igen, tu\[Em]dom, Istenünk hatal\[C]mas,
     Végbevisz \[Am]mindent, amit csak a\[D]k\[H7]ar.
     A hegyek\[Em]től a tenger mélyé\[C]ig,
-    A föld\[Am]től az égbolt magasságá\[D]ig.
+    A föld\[Am]től az égbolt magasságá\[D]ig. \[D4] \[D]
   \endverse
 
   \beginverse*
@@ -28,7 +28,7 @@
     Lássátok ^hát, mily' irgalmas hoz^zánk,
     Jóságos ^Úr és hűséges Ki^r^ály.
     Énekel^jétek hát az Ő ne^vét,
-    Istent di^csérje minden teremt^mény!
+    Istent di^csérje minden teremt^mény! ^ ^
   \endverse
 
   \beginverse*
