--- a/songs/teremts-bennem.tex
+++ b/songs/teremts-bennem.tex
@@ -3,20 +3,26 @@
   li={Kék könyv / 208.}
 ]
 
+  \ifchorded
+    \beginverse*
+      {\nolyrics Előjáték: \[G] \[D] \[C] \[G] \[Em] \[D] \[G] \[C] \[G]}
+    \endverse
+  \fi
+
   \beginverse*
     /: \[G]Teremts bennem \[D]tiszt\_{a} szí\[C]vet, \_{ó} U\[G]ram!
-    Az \[Em]erős lelket \[D]újítsd meg ben\[G-C]nem! \[G] :/ \rep{2}
+    Az \[Em]erős lelket \[D]újítsd meg ben\[G]nem! \[C] \[G] :/ \rep{2}
   \endverse
 
   \beginverse*
-    /: \[Am]Ne vess el en\[D]gem a Te or\[G]cád e\[E]lől!
+    /: \[Am]Ne vess el en\[D]gem a Te or\[G]cád e\[Em]lől!
     \[Am]Szentlelked \[D]ne vondd meg tő\[G]lem! \[G7]
     \[Am]Támogass az \[D]engedelmes\[G]ség lelké\[Em]vel!
     \[Am7]Szabadításod \[D7]örömét add ne\[G]kem! \[G7] :/ \rep{2}
   \endverse
 
   \beginverse*
-    \[Am7]Szabadításod \[D7]örömét add ne\[G-C]kem! \[G]
+    \[Am7]Szabadításod \[D7]örömét add ne\[G]kem! \[C] \[G]
   \endverse
 
 \endsong
