--- a/songs/vizek-felett.tex
+++ b/songs/vizek-felett.tex
@@ -5,7 +5,7 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: \[Hm] \[D] \[A] \[G]}
+      {\nolyrics Előjáték: /: \[Hm] \[D] \[A] \[G] :/ \rep{2}}
     \endverse
   \fi
 
