Fixed songs (mostly with Eszter)

--- a/compilations/antiochia.tex
+++ b/compilations/antiochia.tex
@@ -72,7 +72,7 @@
   \renewcommand{\idxlyricfont}{\rmfamily\slshape}
   % \sepindexesfalse
   \showindex{Tartalomjegyzék}{songs_title_index}
-  \showindex{Taizé-i énekek}{taize_songs_title_index}
+  \showindex{Taizéi énekek}{taize_songs_title_index}
 
   \versesep=12pt plus 3pt minus 5pt
 
