--- a/songs-taize/ahol-szeretet.tex
+++ b/songs-taize/ahol-szeretet.tex
@@ -1,10 +1,10 @@
-\beginsong{Ahol szeretet - !!}
+\beginsong{Ahol szeretet}
 [
   by={Taizé / Jacques Berthier}
 ]
 
   \beginverse*
-    \[F]Ahol \[C]szere\[Dm]tet és \[A#]j\[D]ó\[G]ság, \[F]ahol \[C]szere\[Dm]tet, \[Gm]ott van \[C]Iste\[F]nünk.
+    \[F]Ahol \[C]szere\[Dm]tet és \[A#]j\[D]{\_{ó}}\[G]ság, \[F]ahol \[C]szere\[Dm]tet, \[Gm]ott van \[C]{\_{I}}ste\[F]nünk.
   \endverse
 
 \endsong
