--- a/songs-taize/bizakodjatok-jo-az-ur.tex
+++ b/songs-taize/bizakodjatok-jo-az-ur.tex
@@ -1,11 +1,11 @@
-\beginsong{Bizakodjatok, jó az Úr - !!}
+\beginsong{Bizakodjatok, jó az Úr}
 [
   by={Taizé / Jacques Berthier}
 ]
 
   \beginverse*
-    \[D]Bizakodjatok, \[Hm]jó az Úr, \[D]jósága \[A]éltet,
-    \[Em]Bizakodjatok, \[C]jó az Úr, \[Em]Allel\[A]u\[D]ja!
+    \[D]Bizakodjatok, \[Hm]jó az Úr, \[D]{j\_{ó}}s\_{á}g\_{a} \[A]éltet,
+    \[Em]Bizakodjatok, \[C]jó az Úr, \[Em]Allel\[A]{\_{u}}\[D]ja!
   \endverse
 
 \endsong
