--- a/songs-taize/gyujts-ejszakankba-fenyt.tex
+++ b/songs-taize/gyujts-ejszakankba-fenyt.tex
@@ -1,4 +1,4 @@
-\beginsong{Gyújts éjszakánkba fényt - !!}
+\beginsong{Gyújts éjszakánkba fényt}
 [
   by={Taizé / Jacques Berthier}
 ]
@@ -6,7 +6,7 @@
   \beginverse*
     \[H]Gyújts éjszakánkba \[Em]fényt, hadd égjen a
     Soha ki nem al\[D]vó \[G]tűz, a ki nem \[C]al\[G]vó \[D]tűz!
-    Gyújts \[G]éjsza\[?D?]kánkba \[C]fényt, hadd égjen a
+    Gyújts \[G]éjszakánkba \[C]fényt, hadd égjen a
     \[H]Soha ki nem \[Em]al\[Am6]vó \[H]tűz, a ki nem \[Em]al\[Am6]vó \[H]tűz!
   \endverse
 
