--- a/songs-taize/irgalmas-istenunk.tex
+++ b/songs-taize/irgalmas-istenunk.tex
@@ -1,10 +1,10 @@
-\beginsong{Irgalmas Istenünk - !!}
+\beginsong{Irgalmas Istenünk}
 [
   by={Taizé / Jacques Berthier}
 ]
 
   \beginverse*
-    \[Dm] Irgalmas \[A]Istenünk \[D]jósá\[C]gát \[F]mindö\[C]rökre \[Dm]é\[A]nek\[Dm]lem!
+    \[Dm] Irgalmas \[A]Istenünk \[Dm]jósá\[C]gát \[F]mindö\[C]rökre \[Dm]é\[A]nek\[Dm]lem!
   \endverse
 
 \endsong
