--- a/songs-taize/jezus-majd-gondolj-ram.tex
+++ b/songs-taize/jezus-majd-gondolj-ram.tex
@@ -1,10 +1,10 @@
-\beginsong{Jézus, majd gondolj rám - !!}
+\beginsong{Jézus, majd gondolj rám}
 [
   by={Taizé / Jacques Berthier}
 ]
 
   \beginverse*
-    \[D]Jézus, majd \[Em7]gondolj rám, \[A]ha a Te országod \[D]eljön.
+    \[D]Jézus, majd \[Em7]gondolj rám, \[A]ha a Te országod \[D]{\_{e}}ljön.
     \[Hm]Jézus, majd \[Em]gondolj rám, \[A]ha a Te országod \[D]eljön.
   \endverse
 
