--- a/songs.tex
+++ b/songs.tex
@@ -87,6 +87,7 @@
 \input{songs/teremts-bennem.tex}
 \input{songs/tied-a-dicsoseg.tex}
 \input{songs/tied-vagyunk.tex}
+\input{songs/ur-diadalmas-nagy-fenseg.tex}
 \input{songs/uram-tehozzad-futok.tex}
 \input{songs/utad-var-rad.tex}
 \input{songs/vak-ember.tex}
