--- a/songs/uram-tehozzad-futok.tex
+++ b/songs/uram-tehozzad-futok.tex
@@ -18,7 +18,7 @@
   \endverse
 
   \beginverse*
-    \textnote{A legvégén:}
+    \textnote{A legvégén az utolsó sor helyett:}
     Nagyon \[C]szeretlek Té\[D]ged,
     Nagyon \[C]szeretlek Té\[D]ged,
     Nagyon \[C]szeretlek Té\[D]ged, Jézu\[Em]som. \[Em!]
