--- a/songs-mass/dicsoseg-k159.tex
+++ b/songs-mass/dicsoseg-k159.tex
@@ -1,4 +1,4 @@
-\beginsong{Dicsőség I. - !!}
+\beginsong{Dicsőség I.}
 [
   by={Sillye Jenő},
   li={Kék könyv / 159.}
@@ -15,7 +15,7 @@
     \[A#]Urunk, Jézus \[C7]Krisztus, \[Gm]egyszülött Fi\[Dm]ú,
     \[A#] Urunk és \[C7]Istenünk, \[Gm] Isten \[Dm]Báránya,
     Az \[C7]Atyának Fi\[F]a, Te \[F]elveszed a \[E]világ bűne\[A]it, \[A] \[Dm] irgalmazz \[Gm]nékünk; \[Gm]
-    Te \[F]elveszed a \[E]világ bűne\[A]it, \[A] \[Dm] hallgasd meg \[Dm]könyörgésün\[Gm]ket. \[Gm]
+    Te \[F]elveszed a \[E]világ bűne\[A]it, \[A] \[Dm] hallgasd meg \[Gm]könyörgésünket.
     Te az \[F]Atya jobbján \[E]ülsz, \[E] irgalmazz \[A]nékünk!
     Mert \[D]egyedül Te vagy a \[D]Szent, Te vagy az \[A]Úr,
     Te vagy az \[F#m]egyetlen Föl\[E]ség, Jézus \[A]Krisztus,
