--- a/songs-taize/csak-vandorolunk.tex
+++ b/songs-taize/csak-vandorolunk.tex
@@ -1,11 +1,11 @@
-\beginsong{Csak vándorolunk - !!}
+\beginsong{Csak vándorolunk}
 [
   by={Taizé / Jacques Berthier}
 ]
 
   \beginverse*
     Csak \[Dm]vándorolunk az \[A#]éjben, mert \[C6]forrás vi\[Gm/A#]zére \[A4]vá\[A]gyunk.
-    \[Dm]Szomjunk a \[C]fény a sö\[F]tét\[A]ben, szomjunk a \[A#]fény a sö\[A]tétben.
+    \[Dm]Szomjunk a \[C]fény a sö\[F]{t\_{é}}t\[A]ben, szomjunk a \[A#]fény a sö\[A]tétben.
   \endverse
 
 \endsong
