Casing corrections (for Earth / ground)

--- a/songs/egi-kenyer.tex
+++ b/songs/egi-kenyer.tex
@@ -1,6 +1,9 @@
 \beginsong{Égi kenyér}
-[by={Gen Rosso}]
-%https://www.youtube.com/watch?v=zvVSpXLy8jA
+[
+  by={Gen Rosso}
+]
+
+  % https://www.youtube.com/watch?v=zvVSpXLy8jA
 
   \beginchorus
     \[D]Jézus, Te \[F#m]vagy az \[G]égi keny\[D]ér.
@@ -21,12 +24,12 @@
   \endverse
 
   \beginverse
-    ^Így az egész ^Ég itt van a ^Földön,
+    ^Így az egész ^ég itt van a ^Földön,
     ^Te itt ma^radtál ve^lünk,
     ^De magaddal visz^el
     ^A Te há^zadba,
     ^ Hol Veled ^együtt élhe^tünk,
-    ^ Örökkön ^örökké.^
+    ^ Örökkön ^örökké. ^
   \endverse
 
   \beginverse*
@@ -39,7 +42,7 @@
     ^És ki Belőled ^él,
     ^Élni fog ^mindig,
     ^ Mert Isten ^vagy, ki velünk ^élsz,
-    ^ Bennünk és ^köztünk élsz.^
+    ^ Bennünk és ^köztünk élsz. ^
   \endverse
 
   \beginverse*
