--- a/songs/im-jovunk-hozzad.tex
+++ b/songs/im-jovunk-hozzad.tex
@@ -22,7 +22,7 @@
 
   \beginverse\memorize
     Minden \[Dm]napért – \[G] hála Ne\[C]ked.
-    A Föld gyümöl\[Dm]cséért – \[G] hála Ne\[C]ked. \[E]
+    A föld gyümöl\[Dm]cséért – \[G] hála Ne\[C]ked. \[E]
     Minden mun\[Am]káért, \[E] öröme\[Am]inkért – \[F] hála Ne\[G]ked.
  \endverse
 
