--- a/songs/jezus-a-mi-oltalmunk.tex
+++ b/songs/jezus-a-mi-oltalmunk.tex
@@ -1,7 +1,7 @@
 \beginsong{Jézus a mi oltalmunk}[]
 
   \versesep=12pt plus 3pt minus 12pt
-  
+
   \ifchorded
     \beginverse*
        {\nolyrics Előjáték: \[F] \[C] \[Dm] \[A]\[A#-C] \[F] \[A] \[Dm]}
@@ -16,7 +16,7 @@
   \endchorus
 
   \beginverse\memorize
-    \[F]Ez a föld szét\[C]hullik, \[Dm]minden hegy el\[A]omlik,
+    \[F]Ez a Föld szét\[C]hullik, \[Dm]minden hegy el\[A]omlik,
     \[A#]De egy \[F]kőszikla \[C]örökké \[F]áll!
     \[F]Tajtékzik a \[C]tenger, \[Dm]gyilkol a sok \[A]fegyver,
     \[A#]Né\[C]künk \[F]mégsem árt \[A]a ha\[Dm]lál!
