--- a/songs/lelkem-az-urat-dicserd.tex
+++ b/songs/lelkem-az-urat-dicserd.tex
@@ -21,7 +21,7 @@
   \endverse
 
   \beginverse
-    ^Minden szív ^áldjon, U^ram, ^magasztaljon ^Téged ^ég és ^föld!
+    ^Minden szív ^áldjon, U^ram, ^magasztaljon ^Téged ^ég és ^Föld!
     ^Beszéljék ^hatalma^dat, ^zengjenek ^országod ^fényé^ről!
   \endverse
 
