--- a/songs/mily-gyonyoru-dicserni-teged.tex
+++ b/songs/mily-gyonyoru-dicserni-teged.tex
@@ -26,7 +26,7 @@
 
   \beginverse
     ^Számon tartasz mindent az ^égen,
-    És a ^földön is csak Tőled jön élet.
+    És a ^Földön is csak Tőled jön élet.
     ^Ezernyi útról ^hívsz ide minket,
     Mint a ^gyermekeid vagyunk ^itt, és ezért:
   \endverse
