--- a/songs/minden-mi-el.tex
+++ b/songs/minden-mi-el.tex
@@ -20,7 +20,7 @@
   \endverse
 
   \beginverse
-    ^Dicsér a Föld, dicséri szent neved,
+    ^Dicsér a föld, dicséri szent neved,
     ^Mint jó anyánk, táplál s ad eledelt.
     ^Virág, gyümölcs, zöld fű, fa, hegyvidék,
     ^Tó és folyó, ^síkság és büszke b\_{é}rc!
@@ -33,7 +33,7 @@
   \beginverse
     ^A nagy világ létével énekel,
     ^Szavunkra vár, hogy hangja dal legyen.
-    ^Zengjük tehát ég és föld énekét,
+    ^Zengjük tehát ég és Föld énekét,
     ^Zengjük velük: ^nagy Isten áldott l\_{é}gy!
   \endverse
 
