--- a/songs/mint-maria.tex
+++ b/songs/mint-maria.tex
@@ -7,16 +7,16 @@
 
   \beginverse\memorize
     \[Am] Urunk, mi úgy akarunk \[C]élni,
-    \[Am] hogy életünket adjuk \[Em]Néked,
-    \[F] hogy felajánljuk minden \[D]percünk,
-    \[Am] azért, hogy mindig Te élj \[E]bennünk.
+    \[Am] Hogy életünket adjuk \[Em]Néked,
+    \[F] Hogy felajánljuk minden \[D]percünk,
+    \[Am] Azért, hogy mindig Te élj \[E]bennünk.
   \endverse
 
   \beginverse\
     ^ Urunk, mi úgy akarunk ^élni,
-    ^ hogy bennünk a Te hangod ^szóljon,
-    ^ elszakadva minden ^mástól,
-    ^ tengernyi üres hiú ^vágytól.
+    ^ Hogy bennünk a Te hangod ^szóljon,
+    ^ Elszakadva minden ^mástól,
+    ^ Tengernyi üres hiú ^vágytól.
   \endverse
 
   \beginchorus
@@ -24,21 +24,21 @@
     \[D] Mária \[E]biztos út, \[D]mennyország \[E]kapuja.
     \[D] Szeretettel \[E]győz le minden \[C#m]rosszat.
     \[D] És arra \[Hm]hív, hogy újra \[C#m]éljük
-    Őt \[D]itt lenn a \[A]földön.
+    Őt \[D]itt lenn a \[A]Földön.
   \endchorus
 
   \beginverse\
     ^ Urunk mi úgy akarunk ^élni,
-    ^ hogy azt keressük, ami ^égi,
-    ^ hogy felajánljuk egész ^munkánk,
-    ^ minden napunk baját, ^gondját.
+    ^ Hogy azt keressük, ami ^égi,
+    ^ Hogy felajánljuk egész ^munkánk,
+    ^ Minden napunk baját, ^gondját.
   \endverse
 
   \beginverse
     ^ Urunk mi úgy akarunk ^élni,
-    ^ hogy lángra gyúljon éle^tünk,
-    ^ továbbadva szíved ^vágyát,
-    ^ szereteted élő ^lángját.
+    ^ Hogy lángra gyúljon éle^tünk,
+    ^ Továbbadva szíved ^vágyát,
+    ^ Szereteted élő ^lángját.
   \endverse
 
   \beginverse*
@@ -47,7 +47,7 @@
 
   \beginverse*
     \[D] És arra \[Hm]hív, hogy újra \[C#m]éljük
-    Őt \[D]itt lenn a \[A]földön.
+    Őt \[D]itt lenn a \[A]Földön.
   \endverse
 
 \endsong
