--- a/songs/utad-var-rad.tex
+++ b/songs/utad-var-rad.tex
@@ -20,7 +20,7 @@
     Utad \[F]vár \[C]rád, \[Gm]indulj \[Dm]hát!
     \[F]Nálad van a \[Gm]kincs, mire \[C]mindenki \[Dm]vágy,
     Utad \[F]vár \[C]rád, \[Gm]indulj \[Dm]hát!
-    \[F]Benned az \[G]isteni \[Gm]tűz a földre \[Dm]sz{\_{á}}ll.
+    \[F]Benned az \[G]isteni \[Gm]tűz a Földre \[Dm]sz{\_{á}}ll.
   \endchorus
 
   \beginverse
