--- a/songs/virrassz-meg.tex
+++ b/songs/virrassz-meg.tex
@@ -15,7 +15,7 @@
     \[Dm] Jászolban mélyen alvó
     \[C]Kisdede fölé hajló \[A#]asszony, Mári\[A]a!
     Ki \[Dm]két karodban \[C]ringatgattad, \[F] hideg széltől \[A#]eltakartad \[F]Őt:
-    \[Gm]Ég és föld U\[A]rát;
+    \[Gm]Ég és Föld U\[A]rát;
     S ki \[Dm]félted, óvod \[C]minden bajtól \[F] azóta is \[A#]minden asszony \[F]védtelen,
     \[Gm]Apró magza\[A]tát;
   \endverse
