--- a/songs/tied-vagyunk.tex
+++ b/songs/tied-vagyunk.tex
@@ -10,7 +10,7 @@
   \fi
 
   \beginverse*
-    /: A \[Hm]föld és az \[E]ég \[A]asztalunknál \[D]összeér,
+    /: A \[Hm]Föld és az \[E]ég \[A]asztalunknál \[D]összeér,
     \[G] Értünk lett \[A]élet ez a \[D]bor és a \[Hm]kenyér!
     \[G] Őálta\[A]la, Őve\[D]le, Őben\[Hm]ne
     Tied va\[A]gyunk, Tied va\[G]gyunk,
