Prepare fourth sample release

--- a/compilations/antiochia.tex
+++ b/compilations/antiochia.tex
@@ -13,7 +13,7 @@
 % \usepackage[lyric]{songs}
 
 \usepackage{draftwatermark}
-\SetWatermarkText{3. Minta}
+\SetWatermarkText{4. Minta}
 \SetWatermarkHorCenter{7cm}
 \SetWatermarkScale{0.8}
 \SetWatermarkLightness{0.9}
@@ -31,8 +31,8 @@
 \setlength{\headheight}{0cm}
 \setlength{\headsep}{0cm}
 
-\setlength{\oddsidemargin}{-1.3cm}
-\setlength{\evensidemargin}{-2cm}
+\setlength{\oddsidemargin}{-1.5cm}
+\setlength{\evensidemargin}{-1.8cm}
 
 \setlength{\textwidth}{13cm}
 \setlength{\textheight}{18cm}
@@ -110,8 +110,14 @@
 
   \vspace{0.3cm}
 
-  Készítette: Balics Eszter és Donkó István
+  Készítette: Balics Eszter, Nobilis Márió és Donkó István
 
-  Lektorálta: Nobilis Márió
+  \vspace{0.3cm}
+
+  A dokumentum LaTeX-ben íródott, forráskódja elérhető a
+
+  https://github.com/Isti115/budaorsi-antiochia-dalgyujtemeny oldalon.
+
+  Ugyanitt megtalálható a legfrissebb kiadás is PDF formátumban.
 
 \end{document}
