--- a/songs-mass/szent-vagy-k192.tex
+++ b/songs-mass/szent-vagy-k192.tex
@@ -12,7 +12,7 @@
   \beginverse\memorize
     Szent vagy, \[C]szent vagy, szent vagy, \[G7]sz{\_{e}}nt vagy
     Minden\[F]ségnek Ura, \[G]Istene \[C]
-    \[C7] Dicső\[F]séged betölti a menny\[Em]et, és a föld\[Am]et
+    \[C7] Dicső\[F]séged betölti a menny\[Em]et, és a Föld\[Am]et
     Hozsan\[Dm]na \[G] a magas\[G7]ság\[C]ban!
   \endverse
 
