--- a/songs/adjunk-halat.tex
+++ b/songs/adjunk-halat.tex
@@ -1,6 +1,8 @@
 \beginsong{Adjunk hálát}[]
 
-  \versesep=12pt plus 3pt minus 8pt
+  \ifchorded
+    \versesep=12pt plus 3pt minus 8pt
+  \fi
 
   \ifchorded
     \beginverse*
