--- a/songs/beke-napja-kozel.tex
+++ b/songs/beke-napja-kozel.tex
@@ -5,7 +5,7 @@
 
   \beginverse*
     A \[F]béke \[C]napja köz{\[Dm A#]{\_{e}}}l, \[F]nézd, már \[A#]fénylik a \[C]jel! \[C7]
-    \[F]Jézus \[A]szíve a \[A#]földön, az \[F]é\[C]gen \[F]mindent \[C]egybeöl\[F]el.
+    \[F]Jézus \[A]szíve a \[A#]Földön, az \[F]é\[C]gen \[F]mindent \[C]egybeöl\[F]el.
   \endverse
 
 \endsong
