--- a/songs/ebredj-ember.tex
+++ b/songs/ebredj-ember.tex
@@ -24,13 +24,12 @@
   \endchorus
 
   \beginverse*
-    {\nolyrics \echo{Két félhang emelkedés.} \[A7]}
+    {\nolyrics (Két félhang emelkedés.) \[A7]}
   \endverse
 
-%   \textnote{két félhang emelkedés}
+%   \textnote{Két félhang emelkedés.}
 
   \beginchorus
-%     {\nolyrics (két félhang emelkedés) \[A7]}
     Alle\[D]luja, alle\[G]l{\_{u}}\[D]ja!
     Alle\[F#m]luja, alle\[G]l{\_{u}}\[A]ja!
     Alle\[Hm]luja, alle\[G]luja, al\[D]le\[F#]l{\_{u}}\[Hm]ja!
