--- a/songs/im-jovunk-hozzad.tex
+++ b/songs/im-jovunk-hozzad.tex
@@ -1,23 +1,25 @@
-\beginsong{Ím jövünk Hozzád - !!}
+\beginsong{Ím, jövünk Hozzád}
 [
   by={Gen Verde}
 ]
 
   % https://www.youtube.com/watch?v=etAwcssfdDI
 
+  \transpose{2}
+
   \ifchorded
     \beginverse*
-       {\nolyrics Előjáték: \[C] \[Dm] \[G] \[Em] \[Am] \[C] \[Dm] \[G]}
+       {\nolyrics Előjáték: \[Dm] \[G] \[Em] \[Am] \[C] \[Dm] \[G]}
     \endverse
   \fi
 
   \beginchorus
-    Ím jövünk \[Dm]Hozzád, mindig \[G]újra,
-    s mert a \[Em]szívünk tele van \[Am]fénnyel,
-    együtt \[C]szeretnénk most \[Dm]hálát adni \[G]Néked.
-    Ím jövünk \[Dm]Hozzád, mindig \[G]újra,
-    s mert a \[Em]szívünk tele van \[Am]fénnyel,
-    együtt \[C]szeretnénk most \[Dm]hálát adni \[C]Néked.
+    Ím, jövünk \[Dm]Hozzád, mindig \[G]újra,
+    S mert a \[Em]szívünk tele van \[Am]fénnyel,
+    Együtt \[C]szeretnénk most \[Dm]hálát adni \[G]Néked.
+    Ím, jövünk \[Dm]Hozzád, mindig \[G]újra,
+    S mert a \[Em]szívünk tele van \[Am]fénnyel,
+    Együtt \[C]szeretnénk most \[Dm]hálát adni \[C]Né\[F]ked. \[C]
   \endchorus
 
   \beginverse\memorize
