--- a/songs/szamtalan-a-csoda.tex
+++ b/songs/szamtalan-a-csoda.tex
@@ -3,14 +3,14 @@
   by={Gen Rosso}
 ]
 
-  \beginverse*\memorize
+  \beginchorus\memorize
    \[C]Számtal\[G]an a csoda, \[Dm] amit m\[Am]űvelt az Úr!
     \[C]Nézd, mennyi \[F]virág nyílik a \[C]sziklák közt a \[G]földön!
     Az \[C]Ő sza\[G]va az élet, \[Dm] minden \[Am]igéje tűz,
     \[C]Bennünk akar \[F]továbbélni \[C]mindenütt a \[G]Földön,
     Mert \[Am]Ő az a bővizű, \[Dm]életadó, tiszta \[Em]forrás:
     Ki ebből mer\[F]ít, soha nem szomjazik \[G]már!
-  \endverse
+  \endchorus
 
  \beginverse*
     ^Úgy, mint a ^mag, mely ^földbe hullik ^és kihajt:
@@ -21,7 +21,7 @@
   \endverse
 
   \beginverse*
-    Számtalan a csoda...
+    Refrén \[C]
   \endverse
 
 \endsong
