--- a/songs/vak-ember.tex
+++ b/songs/vak-ember.tex
@@ -9,7 +9,9 @@
   \fi
 
   \beginverse\memorize
-    Az \[Am]úton a \[G]vak ember \[F]ül és ki\[E]ált, \rep{3}
+    Az \[Am]úton a \[G]vak ember \[F]ül és ki\[E]ált,
+    Az \[Am]úton a \[G]vak ember \[F]ül és ki\[E]ált,
+    Az \[Am]úton a \[G]vak ember \[F]ül és ki\[E]ált:
   \endverse
 
   \beginchorus
@@ -19,27 +21,46 @@
   \endchorus
 
   \beginverse
-    A ^béna is ^az úton ^ül és ki^ált, \rep{3}
+    A ^béna is ^az úton ^ül és ki^ált,
+    A ^béna is ^az úton ^ül és ki^ált,
+    A ^béna is ^az úton ^ül és ki^ált:
+  \endverse
+
+  \beginverse*
+    Refrén
   \endverse
 
   \beginverse
-    A ^néma is ^az úton ^ül és (tátog), \rep{2}
+    A \[Am]néma is \[G]az úton \[F]ül és (tátog),
+    A \[Am]néma is \[G]az úton \[F]ül és (tátog),
     A \[Am]néma is \[G]az úton \[F]ül és \[E]kiált:
   \endverse
 
-  \beginverse
-    S mi \[Am]mind csak ü\[G]lünk, és a \[F]szívünk ki\[E]ált, \rep{3}
+  \beginverse*
+    Refrén
   \endverse
 
   \beginverse
-    De \[Am]Jézus is \[G]ott ül ve\[F]lünk és ki\[E]ált, \rep{3}
+    S mi ^mind csak ü^lünk, és a ^szívünk ki^ált,
+    S mi ^mind csak ü^lünk, és a ^szívünk ki^ált,
+    S mi ^mind csak ü^lünk, és a ^szívünk ki^ált:
+  \endverse
+
+  \beginverse*
+    Refrén
+  \endverse
+
+  \beginverse
+    De \[Am]Jézus is \[G]ott ül ve\[F]lünk és ki\[E]ált,
+    De \[Am]Jézus is \[G]ott ül ve\[F]lünk és ki\[E]ált,
+    De \[Am]Jézus is \[G]ott ül ve\[F]lünk és ki\[E]ált:
     Oh, oh, \[E7]oh!
     Én vagyok az {\[Am G F]{\_{ú}}}t, \[E]az igazs{\[Am G F]{\_{á}}}g, és az él{\[Am G F]{\_{e}}}t,
     Ami haza\[E]visz! Oh-\[E7]oh-oh, \[E]oh-oh, \[E7]oh-oh!
   \endverse
 
   \beginverse*
-    \[Am]Jézus \echo{taps} \rep{2}
+    /: \[Am]Jézus :/ \rep{2}
   \endverse
 
   \beginverse*
@@ -49,7 +70,7 @@
   \endverse
 
   \beginverse*
-    \[Am]Jézus \echo{taps}
+    \[Am]Jézus
   \endverse
 
 \endsong
