--- a/songs/varsz-rank.tex
+++ b/songs/varsz-rank.tex
@@ -7,18 +7,18 @@
 
   \beginchorus
     \[F]Vársz \[C]ránk, \[G]mindig csak \[C]{v\_{á}}rsz ránk,
-    \[Am] a taber\[Dm]nákulumban \[G]vársz,
-    mert Te \[C]tudod \[Am]jól, hogy \[Dm]előbb vagy \[G]utóbb
-    meg\[C]értjük \[Am]majd:
-    \[F] Benned \[G]él a Mennyor\[F]szág. \[C]
+    \[Am] A taber\[Dm]nákulumban \[G]vársz,
+    Mert Te \[C]tudod \[Am]jól, hogy \[Dm]előbb vagy \[G]utóbb
+    Meg\[C]értjük \[Am]majd:
+    \[F] Benned \[G]él a mennyor\[F]szág. \[C]
   \endchorus
 
   \beginverse\memorize
     \[Am]Vársz ránk, hogy \[E]megértesd ve\[Am]lünk:
-    hogy \[G]akkor is, ha csend vesz körül \[C]min\[E]ket;
-    s \[Am]úgy tűnik, hogy \[E]nem tehetünk \[Am]semmit,
-    /: \[Dm]pillanatról pillanatra téve azt, mit Te a\[Am]karsz,
-    ti\[E]éd lesz az egész emberi\[Am]ség. :/
+    Hogy \[G]akkor is, ha csend vesz körül \[C]min\[E]ket;
+    S \[Am]úgy tűnik, hogy \[E]nem tehetünk \[Am]semmit,
+    /: \[Dm]Pillanatról pillanatra téve azt, mit Te a\[Am]karsz,
+    Ti\[E]éd lesz az egész emberi\[Am]ség. :/
   \endverse
 
   \beginverse*
@@ -27,8 +27,8 @@
 
   \beginverse
     ^Vársz ránk, hogy ^megértesd ve^lünk,
-    a ^magány nem létezik ^töb^bé,
-    ^mert ^otthonunk az ^{\_{é}}g.
+    A ^magány nem létezik ^töb^bé,
+    ^Mert ^otthonunk az ^{\_{é}}g.
     /: S a ^kenyérben, ha magunkhoz veszünk, Te itt maradsz ben^nünk,
     ^Benned, Benned élhe^tünk. :/
   \endverse
