--- a/songs/vilagnak-krisztus-kell.tex
+++ b/songs/vilagnak-krisztus-kell.tex
@@ -13,7 +13,7 @@
     /: A \[E]világnak \[H7] Krisztus \[E]kell!
     A \[A]világnak \[E] Krisztus \[H7]kell!
     A \[E]világnak \[G#]kellesz \[C#m]te is,
-    \[A]mivel te \[E]Krisztushoz \[H7]tartoz\[E]ol! :/ \rep{2}
+    \[A]Mivel te \[E]Krisztushoz \[H7]tartoz\[E]ol! :/ \rep{2}
   \endchorus
 
   \beginverse*
