--- a/songs/csak-jezusnak-szolgalok.tex
+++ b/songs/csak-jezusnak-szolgalok.tex
@@ -10,9 +10,17 @@
     \[Em]Áldjad, minden \[Hm]nép, \[C]dicsérd szent Ne\[G]vét, \[G]most és \[C]mindörökké, \[D]{\_{á}}\[G]men!
   \endverse
 
+  \beginverse*
+    Refrén
+  \endverse
+
   \beginverse
     ^Hálát adja^tok, ^áldást mondja^tok, ^most és ^mindörökké, ^{\_{á}}^men!
     ^Egyházad di^csér ^nagy jóságo^dért, ^most és ^mindörökké, ^{\_{á}}^men!
+  \endverse
+
+  \beginverse*
+    Refrén
   \endverse
 
   \beginverse
@@ -20,9 +28,17 @@
     ^Áldott irga^lom, ^véred olta^lom, ^most és ^mindörökké, ^{\_{á}}^men!
   \endverse
 
+  \beginverse*
+    Refrén
+  \endverse
+
   \beginverse
     ^Hatalmas az ^Úr, ^jóságos az ^Úr, ^most és ^mindörökké, ^{\_{á}}^men!
     ^Szívem áldja ^Őt, ^ujjongjon a ^Föld, ^most és ^mindörökké, ^{\_{á}}^men!
+  \endverse
+
+  \beginverse*
+    Refrén
   \endverse
 
   \beginverse
@@ -30,9 +46,17 @@
     ^Néked zenge^nek, ^így ünnepel^nek, ^most és ^mindörökké, ^{\_{á}}^men!
   \endverse
 
+  \beginverse*
+    Refrén
+  \endverse
+
   \beginverse
     ^Áldott légy ^Atya, ^s egyszülött ^Fia, ^most és ^mindörökké, ^{\_{á}}^men!
     ^Éltető Lé^lek, ^Téged dicsér^lek, ^most és ^mindörökké, ^{\_{á}}^men!
+  \endverse
+
+  \beginverse*
+    Refrén
   \endverse
 
 \endsong
