--- a/songs/im-itt-jon-o.tex
+++ b/songs/im-itt-jon-o.tex
@@ -1,6 +1,8 @@
 \beginsong{Ím, itt jön Ő}[]
 
-  \versesep=12pt plus 3pt minus 7pt
+  \ifchorded
+    \versesep=12pt plus 3pt minus 6pt
+  \fi
 
   \ifchorded
     \beginverse*
