--- a/songs/lelkem-az-urat-dicserd.tex
+++ b/songs/lelkem-az-urat-dicserd.tex
@@ -5,9 +5,12 @@
 ]
 
   \ifchorded
+    \versesep=12pt plus 3pt minus 6pt
+  \fi
+
+  \ifchorded
     \beginverse*
-       {\nolyrics Előjáték: \[F] \[C7]
-       \[F] \[Gm] \[Am] \[A#] \[F] \[C] \[A#] \[F]}
+       {\nolyrics Előjáték: \[F] \[C7] \[F] \[Gm] \[Am] \[A#] \[F] \[C] \[A#] \[F]}
     \endverse
   \fi
 
@@ -20,9 +23,17 @@
     \[F]Jósága \[C]végtelen \[F]él, \[Gm]irgalma \[C]megmarad \[F] örök\[C]ké!
   \endverse
 
+  \beginverse*
+    Refrén
+  \endverse
+
   \beginverse
     ^Minden szív ^áldjon, U^ram, ^magasztaljon ^Téged ^ég és ^Föld!
     ^Beszéljék ^hatalma^dat, ^zengjenek ^országod ^fényé^ről!
+  \endverse
+
+  \beginverse*
+    Refrén
   \endverse
 
   \beginverse
@@ -30,14 +41,26 @@
     ^Csodálva ^éneke^lem ^félelmes ^tetteid ^ ere^jét.
   \endverse
 
+  \beginverse*
+    Refrén
+  \endverse
+
   \beginverse
     ^Közel vagy ^mindenki^hez, ki ^tiszta ^szívből ^Hozzád ki^ált,
     ^Kérését ^teljesí^ted, ^megőrzöd ^azt, ki ^Téged i^mád.
   \endverse
 
+  \beginverse*
+    Refrén
+  \endverse
+
   \beginverse
     ^Minden nap ^dicsérem ^Őt, ^áldom az ^Urat, míg ^élek ^én.
     ^Új dallal ^színe e^lőtt, ^ujjongva ^hirdetem ^szent Nev^ét!
+  \endverse
+
+  \beginverse*
+    Refrén
   \endverse
 
 \endsong
