--- a/songs/szentlelek-jojj.tex
+++ b/songs/szentlelek-jojj.tex
@@ -1,6 +1,8 @@
 \beginsong{Szentlélek, jöjj}[]
 
-  \versesep=12pt plus 3pt minus 12pt
+  \ifchorded
+    \versesep=12pt plus 3pt minus 10pt
+  \fi
 
   \ifchorded
     \beginverse*
