--- a/songs/tancolj-az-urnak.tex
+++ b/songs/tancolj-az-urnak.tex
@@ -4,6 +4,10 @@
 ]
 
   \ifchorded
+    \versesep=12pt plus 3pt minus 9pt
+  \fi
+
+  \ifchorded
     \beginverse*
       {\nolyrics Előjáték: /: \[Em] \[D] \[Em] \[Hm] \[G] \[D] \[Em] \[Hm] \[Em] :/ \rep{2}}
     \endverse
@@ -21,6 +25,10 @@
     \[G]Daloljon \[D]lelkünk \[Em]uj\[Hm]jong\[Em]va!
   \endverse
 
+  \beginverse*
+    Refrén
+  \endverse
+
   \beginverse
     Mint ^Mária ^Erzsébet ^házá^ban,
     ^Ujjong a ^bensőm ^há^lá^val.
@@ -28,11 +36,19 @@
     ^Alle^luja, ^így ^zen^gi!
   \endverse
 
+  \beginverse*
+    Refrén
+  \endverse
+
   \beginverse
     Kik ^kedvesek az ^Úrnak, ^dicsérik ^Őt,
     ^Hűsé^gükkel ^szol^gál^nak!
     Mint ^betlehemi ^nyájak ^pásztora^i,
     ^Hódol^junk ^szí^ne e^lőtt!
+  \endverse
+
+  \beginverse*
+    Refrén
   \endverse
 
   \ifchorded
