--- a/songs/ur-diadalmas-nagy-fenseg.tex
+++ b/songs/ur-diadalmas-nagy-fenseg.tex
@@ -1,10 +1,8 @@
 \beginsong{Az Úr diadalmas nagy fenség}[]
 
   \beginverse*
-    Az \[C]Úr dia\[G]dalmas nagy fen\[D]ség,
-    Ki az \[Em]egeken trónol,
-    \[C]Bölcs, e\[G]rős és szent,
-    Az \[Am]Úr, neve \[Hm]nagy fen\[Em]ség.
+    Az \[C]Úr dia\[G]dalmas nagy fen\[D]ség, ki az \[Em]egeken trónol,
+    \[C]Bölcs, e\[G]rős és szent az \[Am]Úr, neve \[Hm]nagy fen\[Em]ség.
   \endverse
 
 \endsong
