--- a/songs/ebredj-ember.tex
+++ b/songs/ebredj-ember.tex
@@ -3,7 +3,9 @@
   li={https://youtu.be/-DGzHCfmv5k alapján.}
 ]
 
-  \versesep=12pt plus 3pt minus 8pt
+  \ifchorded
+    \versesep=12pt plus 3pt minus 7pt
+  \fi
 
   \ifchorded
     \beginverse*
