--- a/songs/jezus-a-mi-oltalmunk.tex
+++ b/songs/jezus-a-mi-oltalmunk.tex
@@ -1,6 +1,8 @@
 \beginsong{Jézus a mi oltalmunk}[]
 
-  \versesep=12pt plus 3pt minus 12pt
+  \ifchorded
+    \versesep=12pt plus 3pt minus 10pt
+  \fi
 
   \ifchorded
     \beginverse*
