--- a/songs/lelkem-aldd-az-urat.tex
+++ b/songs/lelkem-aldd-az-urat.tex
@@ -1,6 +1,8 @@
 \beginsong{Lelkem, áldd az Urat}[]
 
-  \versesep=12pt plus 3pt minus 12pt
+  \ifchorded
+    \versesep=12pt plus 3pt minus 10pt
+  \fi
 
   \ifchorded
     \beginverse*
