--- a/songs/melybol-hozzad-szall-szavam.tex
+++ b/songs/melybol-hozzad-szall-szavam.tex
@@ -1,6 +1,8 @@
 \beginsong{A mélyből Hozzád száll szavam}[]
 
-  \versesep=12pt plus 3pt minus 9pt
+  \ifchorded
+    \versesep=12pt plus 3pt minus 7pt
+  \fi
 
   \ifchorded
     \beginverse*
