--- a/songs/minden-mi-el.tex
+++ b/songs/minden-mi-el.tex
@@ -1,5 +1,8 @@
 \beginsong{Minden, mi él}[]
-  \versesep=12pt plus 3pt minus 8pt
+
+  \ifchorded
+    \versesep=12pt plus 3pt minus 7pt
+  \fi
 
   \beginchorus
     \[D]Minden, mi él, csak Téged h\_{i}rdet,
