--- a/songs/o-az-ur.tex
+++ b/songs/o-az-ur.tex
@@ -1,6 +1,8 @@
 \beginsong{Ő az Úr}[]
 
-  \versesep=12pt plus 3pt minus 9pt
+  \ifchorded
+    \versesep=12pt plus 3pt minus 7pt
+  \fi
 
   \beginverse\memorize
     Ő az \[H7]Úr! Ő az \[E]Úr! Meghalt értem a ke\[C#m]reszten, Ő az \[H7]Úr!
