--- a/songs/szeretnelek-megtalalni.tex
+++ b/songs/szeretnelek-megtalalni.tex
@@ -5,7 +5,9 @@
 
   % https://www.youtube.com/watch?v=B_dtzQECo7Y
 
-  \versesep=12pt plus 3pt minus 12pt
+  \ifchorded
+    \versesep=12pt plus 3pt minus 10pt
+  \fi
 
   \beginverse\memorize
     \[Em]Szeretnélek megtalálni önmag\[G]amban,
